/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

message RQ_AddListener {
	ListenerConfig config = 1;
}

message RQ_RemoveListener {
	int32 id = 1;
}

message ListenerConfig {
	int32 id = 1;
	int32 port = 2;
	string name = 3;
	string owner = 4;
	bool localhost_exclusive = 5;
	bool upnp = 6;
	bool client_acceptor = 7;
	bool viewer_acceptor = 8;
	bool datagram_listener = 9;
	
	// certificate and private key
	string cert = 10;
	string key = 11;
	
}